<resources>
    <string name="app_name">UMS</string>
    <string name="action_settings">Settings</string>
    <string name="universityString">University</string>
    <string name="managementString">Management</string>
    <string name="systemString">System</string>
    <string name="userIDString">User ID</string>
    <string name="passwordString">Password</string>
    <string name="loginString">Log In</string>
    <string name="hello_string">Hello </string>
    <string name="self_service_string">Self Service</string>
    <string name="log_out_string">Log Out</string>
    <string name="manage_user_string">Manage User</string>
    <string name="manage_course_string">Manage Course</string>
    <string name="manage_department_string">Manage Department</string>
    <string name="manage_course_professor_string">Manage Course Professor</string>
    <string name="manage_records_string">Manage Records</string>
    <string name="manage_section_string">Manage Section</string>
    <string name="manage_transactions_string">Manage Transactions</string>
    <string name="manage_college_string">Manage College</string>
    <string name="manage_tests_string">Manage Tests</string>
    <string name="page_title">Page Title</string>
    <string name="home_string">Home</string>
    <string name="search">Search</string>
    <string name="content_description_top_bar_search">top app bar search</string>
    <string name="fab_add_content_description">FAB to add items</string>
    <string name="main_page_with_drawer_string">Main Page with Drawer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="no_colleges_string">No Colleges</string>
    <string name="college_id">CID : C/%d</string>
    <string name="manage_profile_string">Manage Profile</string>
    <string name="list_item_option_string">List Item Option</string>
    <string name="cross_button_description">Close current window</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_college_string">Add College</string>
    <string name="college_telephone_string">College Telephone</string>
    <string name="college_address_string">College Address</string>
    <string name="college_name_string">College Name</string>
    <string name="edit_string">Edit</string>
    <string name="delete_string">Delete</string>
    <string name="tap_add_button_to_get_started_string">Tap Add Button to get started</string>
    <string name="user_id_string">UID : </string>
    <string name="user_name_string">User Name</string>
    <string name="contact_number_string">Contact Number</string>
    <string name="user_address_string">Address</string>
    <string name="confirm_user_details">Confirm User Details</string>
    <string name="update_string">Update</string>
    <string name="current_password_string">Current Password</string>
    <string name="new_password_string">New Password</string>
    <string name="confirm_new_password_string">Confirm New Password</string>
    <string name="change_password_string">Change Password</string>
    <string name="person_image_string">Person image</string>
    <string name="hi_string">Hi</string>
    <string name="no_departments_string">No Departments</string>
    <string name="tab_layout_string">Tab Layout</string>
    <string name="departments_string">Departments</string>
    <string name="college_admins_string">College Admins</string>
    <string name="id_string">ID :</string>
    <string name="course_id">ID : C/%d-D/%d-CO/%d</string>
    <string name="college_admin_id">UID : C/%d-CA/%d</string>
    <string name="course_students_title">%s Students</string>
    <string name="department_id">ID : C/%d-D/%d</string>
    <string name="super_admin_user_id">UID : SA/%d</string>
    <string name="college_admin_user_id">UID : CA/%d</string>
    <string name="professor_user_id">UID : P/%d</string>
    <string name="student_user_id">UID : S/%d</string>
    <string name="professor_courses">%s Courses</string>
    <string name="professor_id">UID : C/%d-D/%d-P/%d</string>
    <string name="student_records">%s Records</string>
    <string name="student_id">UID : C/%d-D/%d-S/%d</string>
    <string name="record_attendance">%d (%d%%)</string>
    <string name="record_assignment">%d (Out of 10)</string>
    <string name="record_internal_marks">%d (Out of 40)</string>
    <string name="record_external_marks">%d (Out of 60)</string>
    <string name="selected_number">Selected %d</string>
    <string name="hi_user">Hi %s</string>
    <string name="student_tests">%s Tests</string>
    <string name="semester">Semester %d</string>
    <string name="amount">Amount %d</string>
    <string name="transaction_id">ID: T/%d</string>
    <string name="department_name_string">Department Name</string>
    <string name="add_department_string">Add Department</string>
    <string name="add_user_string">Add User</string>
    <string name="date_of_birth_with_format_string">Date of Birth (yyyy-dd-mm)</string>
    <string name="male_string">Male</string>
    <string name="female_string">Female</string>
    <string name="other_string">Other</string>
    <string name="email_address_string">Email Address</string>
    <string name="no_college_admin_string">No College Admin</string>
    <string name="select_the_gender_string">Select the Gender:</string>
    <string name="scroll_view_of_profile_page_string">Scroll View of Profile Page</string>
    <string name="fab_edit_content_description_string">FAB to edit</string>
    <string name="name_heading_string">Name</string>
    <string name="gender_string">Gender</string>
    <string name="date_of_birth_string">Date of Birth</string>
    <string name="college_details_string">College Details</string>
    <string name="college_id_string">College ID</string>
    <string name="college_admin_profile_string">College Admin Profile</string>
    <string name="information_string">Information</string>
    <string name="no_courses_string">No Courses</string>
    <string name="co_id_string">CO ID:</string>
    <string name="course_name_string">Course Name</string>
    <string name="select_the_elective_string">Select the Elective</string>
    <string name="open_string">Open</string>
    <string name="professional_string">Professional</string>
    <string name="select_the_degree_string">Select the Degree</string>
    <string name="m_tech_string">M. Tech</string>
    <string name="b_tech_string">B. Tech</string>
    <string name="semester_string">Semester</string>
    <string name="add_course_string">Add Course</string>
    <string name="department_details_string">Department Details</string>
    <string name="no_professor_string">No Professor</string>
    <string name="no_students_string">No Students</string>
    <string name="course_professor_list_string">Course Professor List</string>
    <string name="delete_item_string">Delete Item</string>
    <string name="professor_select_string">Professor Select</string>
    <string name="course_professors_string">Course Professors</string>
    <string name="course_details_string">Course Details</string>
    <string name="department_id_string">Department ID</string>
    <string name="tap_add_button_to_add_professor_string">Tap Add Button to add professor</string>
    <string name="tap_add_button_to_select_professors_string">Tap Add Button to select Professors</string>
    <string name="professor_courses_string">Professor Courses</string>
    <string name="tap_add_button_to_select_courses_string">Tap Add Button to select Courses</string>
    <string name="select_string">Select</string>
    <string name="professor_details_string">Professor Details</string>
    <string name="no_student_string">No Student</string>
    <string name="tap_add_button_to_add_students_string">Tap Add Button to add students</string>
    <string name="no_transactions_string">No Transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="date_of_transaction_string">Date of Transaction (yyyy-dd-mm)</string>
    <string name="transaction_amount_string">Transaction Amount</string>
    <string name="tap_add_button_to_continue_string">Tap Add Button to continue</string>
    <string name="elective_string">Elective</string>
    <string name="course_semester_string">Course Semester</string>
    <string name="tap_add_button_to_add_department_string">Tap Add button to add department</string>
    <string name="course_degree_string">Course Degree</string>
    <string name="tap_add_button_to_add_tests_string">Tap Add Button to add tests</string>
    <string name="no_test_records_string">No Test Records</string>
    <string name="add_test_string">Add Test</string>
    <string name="test_mark_string">Test Mark</string>
    <string name="student_course_records_string">Student Course Records</string>
    <string name="attendance_string">Attendance</string>
    <string name="internal_marks_string">Internal Marks</string>
    <string name="external_marks_string">External Marks</string>
    <string name="assignment_marks_string">Assignment Marks</string>
    <string name="status_string">Status</string>
    <string name="attendance_increase_button_string">Attendance Increase Button</string>
    <string name="student_details_string">Student Details</string>
    <string name="student_cgpa_string">Student CGPA</string>
    <string name="degree_string">Degree</string>
    <string name="old_records_string">Old Records</string>
    <string name="next_semester_string">Next Semester</string>
    <string name="completed_courses_string">Completed Courses</string>
    <string name="auto_add_courses_string">Auto Add Courses</string>
    <string name="please_wait_admin_yet_to_add_students_string">Please wait. Admin yet to add Students</string>
    <string name="pay_fees_string">Pay Fees</string>
    <string name="pay_fees_to_register_courses_string">Pay Fees to register courses</string>
    <string name="selected_string">Selected</string>
    <string name="top_app_bar_selected_string">Top app bar selected</string>
    <string name="select_all_toolbar_string">Select All Toolbar</string>
    <string name="user_email_id_or_password_incorrect_string">User email ID or Password incorrect</string>
    <string name="enter_fields_properly_string">Enter fields properly</string>
    <string name="select_courses_string">Select Courses</string>
    <string name="courses_string">Courses</string>
    <string name="professors_string">Professors</string>
    <string name="students_string">Students</string>
    <string name="don_t_leave_name_field_blank_string">Don\'t leave Name field blank</string>
    <string name="don_t_leave_contact_field_blank_string">Don\'t leave Contact field blank</string>
    <string name="enter_10_digit_contact_number_string">Enter 10 digit contact number</string>
    <string name="don_t_leave_address_field_blank_string">Don\'t leave Address field blank</string>
    <string name="add_professor_to_course_string">Add Professor to Course</string>
    <string name="mandatory_courses_string">Mandatory Courses</string>
    <string name="open_courses_string">Open Courses</string>
    <string name="payments_string">Payments</string>
    <string name="maximum_attendance_days_reached_string">Maximum attendance days reached</string>
    <string name="ongoing_backlog_string">Ongoing (Backlog)</string>
    <string name="ongoing_string">Ongoing</string>
    <string name="select_professors_string">Select Professors</string>
    <string name="select_transaction_string">Select Transaction</string>
    <string name="colleges_string">Colleges</string>
    <string name="please_wait_admin_yet_to_add_courses_string">Please wait. Admin yet to add courses</string>
    <string name="transactions_string">Transactions</string>
    <string name="already_paid_for_current_semester_string">Already paid for current semester</string>
</resources>