<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageButton
                android:id="@+id/close_button"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cross_button_description"
                android:src="@drawable/ic_close_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"

                android:src="@drawable/ic_menu_book_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/close_button" />

            <TextView
                android:id="@+id/course_id_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                android:text="@string/id_string"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/course_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:hint="@string/course_name_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/course_id_text_view">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    app:hintTextColor="@color/light_onSurfaceVariant" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/elective_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/select_the_elective_string"
                android:textColor="@color/light_onSurface"
                android:textSize="19sp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/course_name_layout" />

            <RadioGroup
                android:id="@+id/elective_radio_group"
                style="@style/Widget.Material3.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/elective_text_view"
                app:layout_constraintTop_toBottomOf="@id/elective_text_view">

                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_string" />

                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/professional_string" />

            </RadioGroup>

            <TextView
                android:id="@+id/degree_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/select_the_degree_string"
                android:textColor="@color/light_onSurface"
                android:textSize="19sp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/course_name_layout"
                />
            <RadioGroup
                android:id="@+id/degree_radio_group"
                style="@style/Widget.Material3.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/degree_text_view"
                app:layout_constraintTop_toBottomOf="@id/degree_text_view"
                >

                <RadioButton
                    android:id="@+id/btech_degree_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_tech_string" />

                <RadioButton
                    android:id="@+id/mtech_degree_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_tech_string" />

            </RadioGroup>

            <TextView
                android:id="@+id/semester_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/semester_string"
                android:textColor="@color/light_onSurface"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toStartOf="@id/semester_spinner_id"
                app:layout_constraintStart_toStartOf="@id/add_button"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@id/degree_radio_group"
                />
            <Spinner
                style="@style/Widget.AppCompat.TextView.SpinnerItem"
                android:id="@+id/semester_spinner_id"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:prompt="@string/semester_string"
                app:layout_constraintEnd_toEndOf="@id/add_button"
                app:layout_constraintStart_toEndOf="@id/semester_text_view"
                app:layout_constraintTop_toTopOf="@id/semester_text_view"
                app:layout_constraintBottom_toBottomOf="@id/semester_text_view"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_button"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_course_string"
                android:textSize="18sp"
                app:icon="@drawable/ic_plus_24"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/semester_spinner_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:strokeColor="@color/light_primary" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>